2006-03-23 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/dict.rb: fixed bug which made Fantasdic crash 
    with some servers

2006-03-11 Mathieu Blondel <mblondel@cvs.gnome.org>

    * Changelog: renamed to ChangeLog

2006-03-09 Mathieu Blondel <mblondel@cvs.gnome.org>

    * po/Makefile: choose the ruby interpreter to run rgettext
    * lib/fantasdic/ui/main_app.rb: fixed a string
    * data/fantasdic/glade/main_app.glade: "look up" was not translatable

2006-03-05 Mathieu Blondel <mblondel@cvs.gnome.org>

    * Made Ruby/Gettext optional

2006-02-19 Mathieu Blondel <mblondel@cvs.gnome.org>

    * Some fixes to allow Fantasdic run under Windows
    * Some UI tweaks (glade files) (John Spray)
    * release 1.0-beta1.1

2006-02-17 Mathieu Blondel <mblondel@cvs.gnome.org>

    * release 1.0-beta1